--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,12 @@
 	"license": "MIT",
 	"dependencies": {
 		"@ethersproject/abi": "^5.7.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
 		"ethers": "^6.13.0",
 		"express": "^4.21.1",
 		"mongoose": "^8.8.4",
-		"cors": "^2.8.5",
-		"dotenv": "^16.4.7",
+		"winston": "^3.19.0",
 		"zod": "^3.25.76"
 	},
 	"devDependencies": {
@@ -41,4 +42,3 @@
 		"typescript": "^5.7.2"
 	}
 }
-
